feat: Update Spring Batch classes to compile w/21
* Fix JDK 21 compiler warnings.
* Update for method deprecations.
* Update for method signature changes.
* Update for interface method additions.

Refs: discussions-135