@@ -1,12 +1,12 @@
 /*
  * Copyright 2011-2013 Kevin Seim
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -19,6 +19,8 @@ import java.io.*;
 import java.nio.charset.Charset;
 import java.util.Locale;
 
+import javax.annotation.PostConstruct;
+
 import org.beanio.*;
 import org.beanio.internal.util.IOUtil;
 import org.springframework.batch.item.file.*;
@@ -27,12 +29,14 @@ import org.springframework.beans.factory.InitializingBean;
 import org.springframework.core.io.Resource;
 import org.springframework.util.*;
 
+import jakarta.annotation.PostConstruct;
+
 /**
- * A Spring Batch item reader that uses a BeanIO stream mapping file to read items 
+ * A Spring Batch item reader that uses a BeanIO stream mapping file to read items
  * from a flat file.  Restart capabilities are fully supported.
- * 
+ *
  * <p>This implementation requires Spring 2.5 or greater, and Spring Batch 2.1.x.</p>
- * 
+ *
  * @author Kevin Seim
  * @since 1.2
  * @param <T> Class type read from the file
@@ -41,27 +45,25 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
     implements ResourceAwareItemReaderItemStream<T>, InitializingBean {
 
     private static final String DEFAULT_CHARSET = Charset.defaultCharset().name();
-    
+
     private StreamFactory streamFactory;
     private Resource streamMapping;
     private String streamName;
     private Locale locale;
     private boolean strict = true;
     private boolean useSpringExceptions = false;
-    
+
     private Resource resource;
     private String encoding = DEFAULT_CHARSET;
-    
+
     private BeanReader reader;
     private BeanReaderErrorHandler errorHandler;
-    
-    /**
-     * Constructs a new <tt>BeanIOFlatFileItemReader</tt>.
-     */
-    public BeanIOFlatFileItemReader() { 
+
+    @PostConstruct
+    public final void updateName() {
         setName(ClassUtils.getShortName(BeanIOFlatFileItemReader.class));
     }
-    
+
     /*
      * (non-Javadoc)
      * @see org.springframework.beans.factory.InitializingBean#afterPropertiesSet()
@@ -70,14 +72,14 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
         Assert.notNull(streamName, "Stream name must be set");
         initializeStreamFactory();
     }
-    
+
     @Override
     @SuppressWarnings("unchecked")
     protected T doRead() throws Exception {
         if (reader == null) {
             return null;
         }
-        
+
         try {
             return (T) reader.read();
         }
@@ -88,7 +90,7 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
             if (useSpringExceptions) {
                 RecordContext ctx = ex.getRecordContext();
                 if (ctx != null) {
-                    throw new FlatFileParseException(ex.getMessage(), ex, 
+                    throw new FlatFileParseException(ex.getMessage(), ex,
                         ctx.getRecordText(), ctx.getLineNumber());
                 }
                 else {
@@ -115,7 +117,7 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
 
         // open the input stream
         InputStream bin = resource.getInputStream();
-        
+
         // wrap the input stream in a Reader
         Reader in;
         if (encoding == null) {
@@ -124,14 +126,14 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
         else {
             in = new InputStreamReader(bin, encoding);
         }
-        
+
         // create the BeanReader
         reader = streamFactory.createReader(streamName, in, locale);
         if (errorHandler != null) {
             reader.setErrorHandler(errorHandler);
         }
     }
-    
+
     @Override
     protected void doClose() throws Exception {
         if (reader != null) {
@@ -139,20 +141,20 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
             reader = null;
         }
     }
-    
+
     @Override
     protected void jumpToItem(int itemIndex) throws Exception {
         if (itemIndex <= 0) {
             return;
         }
-        
+
         int skipped = 0;
         if (reader != null) {
             skipped = reader.skip(itemIndex);
         }
-        
+
         if (skipped < itemIndex) {
-            throw new IllegalStateException("Failed to skip " + itemIndex + 
+            throw new IllegalStateException("Failed to skip " + itemIndex +
                 " items, end of stream reached after " + skipped + " items");
         }
     }
@@ -168,7 +170,7 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
         if (streamFactory == null) {
             streamFactory = StreamFactory.newInstance();
         }
-        
+
         // load the configured stream mapping if the stream name is not already mapped
         if (!streamFactory.isMapped(streamName) && streamMapping != null) {
             InputStream in = streamMapping.getInputStream();
@@ -179,12 +181,12 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
                 IOUtil.closeQuietly(in);
             }
         }
-        
+
         if (!streamFactory.isMapped(streamName)) {
             throw new IllegalStateException("No mapping configuration for stream '" + streamName + "'");
         }
     }
-    
+
     /**
      * Returns the record or group name of the most recent bean object
      * read from this reader, or null if the end of the stream was reached.
@@ -194,18 +196,18 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
     public String getRecordName() {
         return reader != null ? reader.getRecordName() : null;
     }
-    
+
     /**
      * Returns the starting line number of the first record for the most recent bean
-     * object read from this reader, or -1 when the end of the stream is reached.  
-     * The line number may be zero if new lines are not used to separate characters.  
+     * object read from this reader, or -1 when the end of the stream is reached.
+     * The line number may be zero if new lines are not used to separate characters.
      * @return the line number, or -1 if the stream is closed
      * @since 2.0.6
      */
     public int getLineNumber() {
         return reader != null ? reader.getLineNumber() : -1;
     }
-    
+
     /**
      * Returns the number of records read from the underlying input stream for the
      * most recent bean object read from this reader.  This typically returns 1
@@ -217,7 +219,7 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
     public int getRecordCount() {
         return reader != null ? reader.getRecordCount() : -1;
     }
-    
+
     /**
      * Returns record information for the most recent bean object read from this reader.
      * If a bean object can span multiple records, {@link #getRecordCount()} can be used
@@ -231,7 +233,7 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
     public RecordContext getRecordContext(int index) throws IndexOutOfBoundsException {
         return reader != null ? reader.getRecordContext(index) : null;
     }
-    
+
     /**
      * Returns the underlying {@link BeanReader}.
      * @return the {@link BeanReader}, or null if the stream is closed
@@ -240,7 +242,7 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
     protected BeanReader getBeanReader() {
         return reader;
     }
-    
+
     /*
      * (non-Javadoc)
      * @see org.springframework.batch.item.file.ResourceAwareItemReaderItemStream#setResource(org.springframework.core.io.Resource)
@@ -311,7 +313,7 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
     public void setUseSpringExceptions(boolean useSpringExceptions) {
         this.useSpringExceptions = useSpringExceptions;
     }
-    
+
     /**
      * Sets the BeanIO error handler for handling BeanIO specific exceptions.
      * If no error handler is set, the {@link #read()} method will throw the exception
@@ -323,7 +325,7 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
     }
 
     /**
-     * Sets the locale for resolving error messages from a stream mapping's 
+     * Sets the locale for resolving error messages from a stream mapping's
      * configured resource bundle.  By default, the system default locale is used.
      * @param locale the locale for resolving error messages
      */
@@ -332,16 +334,16 @@ public class BeanIOFlatFileItemReader<T> extends AbstractItemCountingItemStreamI
             this.locale = null;
             return;
         }
-        
+
         String [] s = locale.split("_");
         if (s.length >= 3) {
-            this.locale = new Locale(s[0], s[1], s[2]);
+            this.locale = Locale.of(s[0], s[1], s[2]);
         }
         else if (s.length == 2){
-            this.locale = new Locale(s[0], s[1]);
+            this.locale = Locale.of(s[0], s[1]);
         }
         else {
-            this.locale = new Locale(locale);
+            this.locale = Locale.of(locale);
         }
     }
 }
